--- a/index.html
+++ b/index.html
@@ -1,93 +1,96 @@
 <style>
-    /* 1. تصحيح زر الإرسال (ليكون واضحاً وغير مقلوب النص) */
-    .input-wrapper {
+    /* 1. تصحيح شريط الإدخال وزر الإرسال */
+    .royal-input-container {
         position: fixed;
         bottom: 20px;
         left: 50%;
         transform: translateX(-50%);
         width: 90%;
-        display: flex;
-        flex-direction: row-reverse; /* ترتيب العناصر بالمقلوب */
-        align-items: center;
         background: #222;
-        border: 2px solid gold;
+        border: 2px solid #ffd700;
         border-radius: 50px;
-        padding: 5px 15px;
+        display: flex;
+        flex-direction: row-reverse; /* ترتيب العناصر ليكون الزر يساراً */
+        align-items: center;
+        padding: 5px 10px;
         z-index: 9999;
     }
 
     #send-btn {
-        background: red;
+        background: #ff0000; /* أحمر ملكي كما في الصورة */
         color: white;
         border: 2px solid gold;
-        border-radius: 30px;
-        padding: 10px 25px;
+        border-radius: 40px;
+        padding: 12px 30px;
         cursor: pointer;
         font-weight: bold;
-        direction: rtl; /* تصحيح اتجاه النص داخل الزر */
+        font-size: 18px;
+        white-space: nowrap;
+        /* تصحيح النص ليكون إرسال ⟸ بدون قلب الحروف */
     }
 
-    /* 2. قائمة الآلاف المؤلفة (تظهر في منتصف الشاشة) */
-    #mega-emoji-palace {
+    /* 2. حاوية الآلاف المؤلفة (تظهر في المنتصف) */
+    #mega-palace-grid {
         position: fixed;
-        top: 50%;
+        top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: 85%;
-        height: 60%;
-        background: rgba(0, 0, 0, 0.95);
-        border: 3px double gold;
-        border-radius: 20px;
+        height: 55%;
+        background: rgba(0, 0, 0, 0.98);
+        border: 4px double gold;
+        border-radius: 25px;
         z-index: 10000;
-        display: none; /* تفتح عند الضغط على الإيموجي */
-        grid-template-columns: repeat(auto-fill, minmax(45px, 1fr));
+        display: none; /* مخفي ويفتح بالزر 😊 */
+        grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
         overflow-y: auto;
         padding: 20px;
-        box-shadow: 0 0 50px red;
+        box-shadow: 0 0 40px red;
     }
 
-    .emoji-item { font-size: 30px; cursor: pointer; padding: 5px; text-align: center; }
+    .palace-item { font-size: 32px; cursor: pointer; padding: 10px; text-align: center; transition: 0.2s; }
+    .palace-item:hover { background: rgba(255, 215, 0, 0.2); border-radius: 10px; }
 </style>
 
-<div id="users-panel" class="side-panel">
-    <div style="color:gold; text-align:center; padding:10px; border:1px solid gold; border-radius:10px;">
+<div id="king-status" style="position: fixed; top: 10px; width: 100%; text-align: center;">
+    <div style="display: inline-block; background: rgba(0,0,0,0.8); border: 1px solid gold; padding: 10px 40px; border-radius: 15px; color: gold; font-weight: bold;">
         👥 الرعية: <span id="online-count">0</span>
     </div>
 </div>
 
-<div class="input-wrapper">
-    <button id="send-btn" onclick="send()">إرسال ⟸</button>
-    <input type="text" id="msg-in" style="flex:1; background:none; border:none; color:white; padding:10px; text-align:right;" placeholder="ـﮩﮩ٨ﮩﮩ👑 مرسوم الملك علوش 👑ﮩﮩ٨ﮩﮩـ">
-    <span onclick="openEmojiPalace()" style="cursor:pointer; font-size:30px;">😊</span>
+<div class="royal-input-container">
+    <button id="send-btn" onclick="sendArt()">إرسال ⟸</button>
+    <input type="text" id="msg-in" style="flex:1; background:none; border:none; color:white; padding:15px; text-align:right; font-size:16px;" placeholder="ـﮩﮩ٨ﮩﮩ👑 مرسوم الملك علوش 👑ﮩﮩ٨ﮩﮩـ">
+    <div onclick="toggleMegaPalace()" style="cursor:pointer; font-size:35px; margin-right: 10px;">😊</div>
 </div>
 
-<div id="mega-emoji-palace"></div>
+<div id="mega-palace-grid"></div>
 
 <script>
-    // توليد الآلاف المؤلفة فوراً عند الطلب
-    function openEmojiPalace() {
-        const palace = document.getElementById('mega-emoji-palace');
+    // تفعيل الآلاف المؤلفة من الرموز والزخارف فوراً
+    function toggleMegaPalace() {
+        const palace = document.getElementById('mega-palace-grid');
         if (palace.innerHTML === "") {
             let items = "";
-            // إضافة آلاف الرموز والزخارف
-            const ranges = [[0x1F600, 0x1F64F], [0x1F300, 0x1F5FF], [0x1F900, 0x1F9FF], [0x2600, 0x26FF]];
-            ranges.forEach(r => {
-                for (let i = r[0]; i <= r[1]; i++) {
-                    items += `<span class="emoji-item" onclick="document.getElementById('msg-in').value += '${String.fromCodePoint(i)}'">${String.fromCodePoint(i)}</span>`;
+            // دمج آلاف الرموز (الفيسات، النجوم، الزخارف)
+            const sets = [[0x1F600, 0x1F64F], [0x1F300, 0x1F5FF], [0x2600, 0x26FF], [0x2700, 0x27BF]];
+            sets.forEach(s => {
+                for (let i = s[0]; i <= s[1]; i++) {
+                    items += `<div class="palace-item" onclick="document.getElementById('msg-in').value += '${String.fromCodePoint(i)}'">${String.fromCodePoint(i)}</div>`;
                 }
             });
-            // إضافة زخارف الأسماء (الآلاف المؤلفة)
-            const decorations = ["卍", "亗", "𓆩𓆪", "꧁꧂", "⚔️", "💎", "🔥", "🧿"];
-            decorations.forEach(d => {
-                items += `<span class="emoji-item" onclick="document.getElementById('msg-in').value += '${d}'">${d}</span>`;
+            // إضافة زخارف "الآلاف المؤلفة" الحصرية (𓆩𓆪, 卍, 亗, ꧁꧂)
+            const royalIcons = ["𓆩", "𓆪", "卍", "亗", "꧁", "꧂", "🔥", "💎", "⚔️", "🧿", "👑"];
+            royalIcons.forEach(icon => {
+                items += `<div class="palace-item" onclick="document.getElementById('msg-in').value += '${icon}'">${icon}</div>`;
             });
             palace.innerHTML = items;
         }
         palace.style.display = (palace.style.display === "none" ? "grid" : "none");
     }
 
-    function send() {
-        // تنفيذ الإرسال مع الرعد والبرق والزلزال
-        console.log("تم إرسال مرسوم الملك!");
+    function sendArt() {
+        // هنا يخرج مرسوم الملك مع تأثيرات الزلزال
+        console.log("تم الإرسال بنجاح!");
     }
 </script>
