--- a/index.html
+++ b/index.html
@@ -1,110 +1,60 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <style>
-        :root { --king-gold: #ffd700; --royal-red: #ff0000; }
-        body { background: #000; color: white; margin: 0; overflow: hidden; font-family: 'Segoe UI', Tahoma, sans-serif; }
+<style>
+    /* 1. الأجنحة: إجبارية الظهور والحركة */
+    .wing {
+        position: fixed; top: 100px; width: 250px; height: 65%;
+        background: rgba(0,0,0,0.9); border: 3px solid gold;
+        border-radius: 20px; transition: 0.4s all; z-index: 5000;
+    }
+    #right-wing { right: 10px; transform: translateX(0); }
+    #left-wing { left: 10px; transform: translateX(0); }
+    .closed-right { transform: translateX(260px) !important; } /* سد الجناح اليمين */
+    .closed-left { transform: translateX(-260px) !important; } /* سد الجناح اليسار */
 
-        /* 1. الأجنحة الملكية (تنسد وتنفتح بذكاء) */
-        .side-panel {
-            position: fixed; top: 80px; width: 240px; height: 70%;
-            background: rgba(0,0,0,0.95); border: 2px solid var(--king-gold);
-            border-radius: 20px; transition: 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-            z-index: 2000; box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
-        }
-        #users-panel { right: 15px; } 
-        #settings-panel { left: 15px; }
-        .panel-hidden { transform: scaleX(0); opacity: 0; pointer-events: none; }
+    /* 2. بحر الآلاف المؤلفة: يظهر كأنه تطبيق منفصل */
+    #mega-store {
+        position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0);
+        width: 90%; height: 70%; background: #000; border: 5px double gold;
+        z-index: 10000; display: grid; grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+        overflow-y: scroll; padding: 20px; transition: 0.3s; border-radius: 30px;
+    }
+    .show-store { transform: translate(-50%, -50%) scale(1) !important; }
 
-        /* 2. شريط الإرسال والزر المقلوب المصحح */
-        .input-bar {
-            position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
-            width: 90%; display: flex; flex-direction: row-reverse; /* الزر يساراً */
-            background: #1a1a1a; border: 2px solid var(--king-gold);
-            border-radius: 50px; padding: 10px 20px; align-items: center; z-index: 3000;
-        }
-        #send-btn {
-            background: var(--royal-red); color: white; border: 2px solid var(--king-gold);
-            border-radius: 40px; padding: 12px 30px; cursor: pointer;
-            font-weight: bold; font-size: 18px; white-space: nowrap;
-        }
+    /* 3. زر الإرسال المقلوب: تصحيح الخطأ في الصور */
+    .royal-send-btn {
+        background: red !important; color: white !important;
+        border: 2px solid gold !important; border-radius: 50px !important;
+        padding: 10px 30px !important; font-weight: bold !important;
+        cursor: pointer;
+    }
+</style>
 
-        /* 3. بحر الآلاف المؤلفة (بمنتصف الشاشة) */
-        #mega-emoji-box {
-            position: fixed; top: 45%; left: 50%; transform: translate(-50%, -50%);
-            width: 85%; height: 60%; background: rgba(0,0,0,0.98);
-            border: 4px double var(--king-gold); border-radius: 25px;
-            display: none; grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-            overflow-y: auto; padding: 25px; z-index: 10000;
-        }
-        .emoji-item { font-size: 35px; cursor: pointer; text-align: center; padding: 10px; transition: 0.2s; }
-        .emoji-item:hover { transform: scale(1.3); background: rgba(255,215,0,0.2); border-radius: 10px; }
+<button onclick="document.getElementById('right-wing').classList.toggle('closed-right')" style="position:fixed; top:20px; right:20px; z-index:6000;">𓆩 سد/فتح الرعية 𓆪</button>
+<button onclick="document.getElementById('left-wing').classList.toggle('closed-left')" style="position:fixed; top:20px; left:20px; z-index:6000;">𓆩 سد/فتح الإعدادات 𓆪</button>
 
-        /* أزرار التحكم الملكية */
-        .royal-toggle {
-            position: fixed; top: 20px; background: #222; color: var(--king-gold);
-            border: 1px solid var(--king-gold); padding: 10px 20px; border-radius: 15px;
-            cursor: pointer; z-index: 4000; font-weight: bold;
-        }
-    </style>
-</head>
-<body onload="buildKingdom()">
-
-    <button class="royal-toggle" style="right: 20px;" onclick="toggleWing('users-panel')">𓆩 الرعية 𓆪</button>
-    <button class="royal-toggle" style="left: 20px;" onclick="toggleWing('settings-panel')">𓆩 الإعدادات 𓆪</button>
-
-    <div id="users-panel" class="side-panel">
-        <div style="color:var(--king-gold); text-align:center; padding:15px; border-bottom:1px solid gold; font-weight:bold;">
-            👥 الرعية المتواجدة: <span id="online-count">0</span>
-        </div>
-        <div id="user-list"></div>
+<div id="right-wing" class="wing">
+    <div style="color:gold; text-align:center; padding:15px; border-bottom:1px solid gold;">
+        👥 الرعية: <span id="count">0</span>
     </div>
+</div>
 
-    <div id="settings-panel" class="side-panel">
-        <div style="color:var(--king-gold); text-align:center; padding:15px;">⚙️ نظام القصر الملكي</div>
-        <button style="width:90%; margin:5%; padding:12px; background:white; color:black; font-weight:bold; border-radius:10px;">نظام الحماية الملكي 🛡️</button>
-    </div>
+<div id="left-wing" class="wing">
+    <div style="color:gold; text-align:center; padding:15px;">⚙️ نظام الحماية الملكي 🛡️</div>
+</div>
 
-    <div id="mega-emoji-box"></div>
+<div id="mega-store"></div>
 
-    <div class="input-bar">
-        <button id="send-btn" onclick="sendRoyalMessage()">إرسال ⟸</button>
-        <input type="text" id="msg-in" style="flex:1; background:none; border:none; color:white; padding:15px; text-align:right; outline:none;" placeholder="ـﮩﮩ٨ﮩﮩ👑 مرسوم الملك علوش 👑ﮩﮩ٨ﮩﮩـ">
-        <div onclick="openMegaMenu()" style="cursor:pointer; font-size:35px; margin-right:15px;">😊</div>
-    </div>
+<div style="position:fixed; bottom:20px; width:100%; display:flex; flex-direction:row-reverse; justify-content:center; gap:10px; z-index:6000;">
+    <button class="royal-send-btn" onclick="alert('تم إرسال مرسوم مزخرف!')">إرسال ⟸</button>
+    <input type="text" id="inp" style="width:60%; border-radius:50px; padding:10px; text-align:right;" placeholder="مرسوم الملك علوش...">
+    <button onclick="document.getElementById('mega-store').classList.toggle('show-store')" style="font-size:30px; background:none; border:none; cursor:pointer;">😊</button>
+</div>
 
-    <script>
-        // 1. تفعيل حركة الأجنحة (الفتح والغلق)
-        function toggleWing(id) {
-            document.getElementById(id).classList.toggle('panel-hidden');
-        }
-
-        // 2. تفعيل الآلاف المؤلفة (بحر الإيموجيات والزخارف)
-        function openMegaMenu() {
-            const box = document.getElementById('mega-emoji-box');
-            if(box.innerHTML === "") {
-                let html = "";
-                // توليد آلاف الرموز
-                for(let i=0x1F600; i<0x1F64F; i++) html += `<div class="emoji-item" onclick="add('${String.fromCodePoint(i)}')">${String.fromCodePoint(i)}</div>`;
-                // إضافة زخارف اللاوات الحصرية
-                const kings = ["𓆩", "𓆪", "卍", "亗", "꧁", "꧂", "🔥", "💎", "⚔️", "👑", "🧿"];
-                kings.forEach(k => html += `<div class="emoji-item" onclick="add('${k}')" style="color:gold;">${k}</div>`);
-                box.innerHTML = html;
-            }
-            box.style.display = (box.style.display === "none" ? "grid" : "none");
-        }
-
-        function add(v) { document.getElementById('msg-in').value += v; }
-
-        // 3. تفعيل الإرسال مع الرعد والزخرفة
-        function sendRoyalMessage() {
-            const input = document.getElementById('msg-in');
-            if(input.value.trim()) {
-                alert("تم إرسال مرسوم مزخرف: ꧁ " + input.value + " ꧂");
-                input.value = "";
-                // تفعيل تأثير الزلزال الملكي
-            }
-        }
-    </script>
-</body>
-</html>
+<script>
+    // تفعيل انفجار الآلاف المؤلفة
+    const store = document.getElementById('mega-store');
+    let data = "";
+    for(let i=0x1F600; i<0x1F64F; i++) data += `<span onclick="document.getElementById('inp').value += '${String.fromCodePoint(i)}'" style="font-size:35px; cursor:pointer;">${String.fromCodePoint(i)}</span>`;
+    const symbols = ["𓆩", "𓆪", "卍", "亗", "꧂", "꧁", "🔥", "👑"];
+    symbols.forEach(s => data += `<span onclick="document.getElementById('inp').value += '${s}'" style="font-size:35px; cursor:pointer; color:gold;">${s}</span>`);
+    store.innerHTML = data;
+</script>
